tests/typing/errors/unfounded_datatype/error.smt2
(set-logic QF_UFDT)
(declare-datatypes ((colist 1)) ((par (alpha) ((cons (head (colist alpha)))))))
